# github-trending-newsletter

./: README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
scripts/: emailer.py  formatter.py  main.py  scraper.py
templates/: email_template.html
